--- a/css/Waldo.css
+++ b/css/Waldo.css
@@ -11,7 +11,7 @@
 #filter_css {
     width: 200px;
     float: left;
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 html {
@@ -25,11 +25,22 @@ h1 {
     padding-left: 15px;
 }
 
+p {
+    margin-top: -20px;
+}
+
 .button{
     background-color: lightgray;
     margin-bottom: 2px;
     margin-left: 10px;
     width: 175px;
+}
+
+.spbutton {
+    background-color: lightgray;
+    margin-bottom: 2px;
+    margin-left: 10px;
+    width: 155px;
 }
 
 .divider {
@@ -50,6 +61,10 @@ h1 {
 
 #color-selector {
     margin: 0 0 0 180px;
+}
+
+#patternMatchingOptions {
+    margin: 15px 0 0 0;
 }
 
 #picker-wrapper {
