--- a/css/Waldo.css
+++ b/css/Waldo.css
@@ -52,6 +52,10 @@ p {
     cursor: crosshair;
 }
 
+.instructions {
+    margin-bottom: 5px;
+}
+
 #colorfilter{
     width: 170px;
     margin: -25px 15px 30px 0px;
