--- a/templates/Waldo.html
+++ b/templates/Waldo.html
@@ -4,9 +4,9 @@
     <meta content="utf-8" http-equiv="encoding">
     <head>
         <link rel="shortcut icon" href="/img/waldoheadcon.ico" type="image/x-icon" />
-        <link rel="stylesheet" type="text/css" href="css/Waldo.css">
-        <script type="text/javascript" src="js/waldo.js"></script>
-        <script type="text/javascript" src="js/colorpicker.js"></script>
+        <link rel="stylesheet" type="text/css" href="../static/Waldo.css">
+        <script type="text/javascript" src="{{ url_for('static', filename='waldo.js') }}"></script>
+        <script type="text/javascript" src="{{ url_for('static', filename='colorpicker.js') }}"></script>
 
         <title>
             Where's Waldo
