--- a/templates/Waldo.html
+++ b/templates/Waldo.html
@@ -74,7 +74,7 @@
             
             <a id="infoheader" href="javascript: void(0);" onClick="toggleInstructions('info')">Hide Instructions</a>
             <div id="info" class="instructions" style="display:block;">
-                To use "Gray Out Area" and "Remove Grey" click desired button then click on the image the upper left and lower right to ...
+                Click the desired button, then the top left & bottom right of the area you want to change.
             </div>
             
 
