Hopeful fix to image selector...

--- a/templates/Waldo.html
+++ b/templates/Waldo.html
@@ -19,7 +19,7 @@
 		
 			<button class='button' id="inp" type='file' onclick='uploadpic();'>Choose Puzzle</button>
             
-			<select  id="inp">
+			<select  id="inp_select">
 			<option value="puz1.jpg">WaldoPuzzle1</option>
 			<option value="puz2.jpg">WaldoPuzzle2</option>
 			<option value="puz3.jpg">WaldoPuzzle3</option>
