Makes things work fairly well.

--- a/templates/Waldo.html
+++ b/templates/Waldo.html
@@ -113,7 +113,7 @@
                 <input id="threshold" name = "b" type="range">
                 <!-- <button class='button' id='patternMatch' >Here's Waldo!</button> -->
                 <br>
-                <a class='button' href=# id="calculate">Here's Waldo!/a>
+                <a class='button' href=# id="calculate">Here's Waldo!</a>
 
             </div>
         </div> <!--end of filters-->
