Replaces yellow filter with white filter.

--- a/templates/Waldo.html
+++ b/templates/Waldo.html
@@ -77,7 +77,7 @@
                 <label>
                     <input class="checkboxes" autocomplete="off" 
                               type='checkbox' onclick='updateCheckbox(this, 2);'>
-                    Show Yellow
+                    Show White
                 </label>
             </div>
 
