--- a/templates/Waldo.html
+++ b/templates/Waldo.html
@@ -18,7 +18,7 @@
         </title>
     </head>
     <body>
-        <h1>Here's Waldo!</h1>
+        <h2>Here's Waldo!</h2>
         
         <div id="upload_css">
 		
@@ -81,7 +81,7 @@
                 </label>
             </div>
 
-            <div id="colorfilter">
+            <div id="colorfilterlast">
                 <label>
                     <input class="checkboxes" autocomplete="off" 
                               type='checkbox' onclick='updateCheckbox(this, 3);'>
@@ -93,7 +93,7 @@
             
             <hr class='divider'>
 
-            <a id="instrheader" href="javascript: void(0);" onClick="toggleText('instr', 'instrheader', 'Show Instructions', 'Hide Instructions')">Show Instructions</a>
+            <a id="instrheader" class="removevspace" href="javascript: void(0);" onClick="toggleText('instr', 'instrheader', 'Show Instructions', 'Hide Instructions')">Show Instructions</a>
             <div id="instr" class="instructions" style="display:none;">
                 Click the desired button, then the top left & bottom right of the area you want to change.
             </div>
